[gd_scene load_steps=15 format=2]

[ext_resource path="res://TextureProgress.gd" type="Script" id=1]
[ext_resource path="res://SelectionBar.png" type="Texture" id=2]
[ext_resource path="res://Ball.png" type="Texture" id=3]
[ext_resource path="res://BallD.png" type="Texture" id=4]
[ext_resource path="res://Sleep.png" type="Texture" id=5]
[ext_resource path="res://SleepD.png" type="Texture" id=6]
[ext_resource path="res://Sherbert.png" type="Texture" id=7]
[ext_resource path="res://SherbertD.png" type="Texture" id=8]
[ext_resource path="res://Progress Bar BKG.png" type="Texture" id=9]
[ext_resource path="res://Progress Bar01.png" type="Texture" id=10]
[ext_resource path="res://Progress Bar02.png" type="Texture" id=11]
[ext_resource path="res://Fishfingers.ttf" type="DynamicFontData" id=12]

[sub_resource type="DynamicFont" id=1]

size = 60
use_mipmaps = false
use_filter = false
font_data = ExtResource( 12 )
_sections_unfolded = [ "Font", "Settings" ]

[sub_resource type="DynamicFont" id=2]

size = 35
use_mipmaps = false
use_filter = false
font_data = ExtResource( 12 )
_sections_unfolded = [ "Font", "Settings" ]

[node name="Control" type="Control" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 40.0
margin_bottom = 40.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
script = ExtResource( 1 )

[node name="Container" type="Container" parent="." index="0"]

anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -540.0
margin_top = 40.0
margin_right = 460.0
margin_bottom = 250.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
_sections_unfolded = [ "Anchor", "Margin" ]

[node name="CenterContainer" type="CenterContainer" parent="Container" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
use_top_left = false
_sections_unfolded = [ "Margin" ]

[node name="ButtonBKG" type="Sprite" parent="Container/CenterContainer" index="0"]

scale = Vector2( 3.5984, 3.5984 )
texture = ExtResource( 2 )
centered = false
_sections_unfolded = [ "Offset", "Transform" ]

[node name="HBoxContainer" type="HBoxContainer" parent="Container/CenterContainer" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 271.0
margin_top = 30.0
margin_right = 729.0
margin_bottom = 180.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
alignment = 1
_sections_unfolded = [ "Anchor", "Margin", "Rect" ]

[node name="Play" type="TextureButton" parent="Container/CenterContainer/HBoxContainer" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 150.0
margin_bottom = 150.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 3 )
texture_disabled = ExtResource( 4 )
_sections_unfolded = [ "Textures" ]

[node name="Sleep" type="TextureButton" parent="Container/CenterContainer/HBoxContainer" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 154.0
margin_right = 304.0
margin_bottom = 150.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 5 )
texture_disabled = ExtResource( 6 )
_sections_unfolded = [ "Textures" ]

[node name="Feed" type="TextureButton" parent="Container/CenterContainer/HBoxContainer" index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 308.0
margin_right = 458.0
margin_bottom = 150.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 7 )
texture_disabled = ExtResource( 8 )
_sections_unfolded = [ "Margin", "Textures" ]

[node name="HPBarContainer" type="Control" parent="." index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 40.0
margin_bottom = 40.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
__meta__ = {
"_edit_group_": true
}

[node name="HPBar" type="TextureProgress" parent="HPBarContainer" index="0"]

anchor_left = 0.0
anchor_top = 1.0
anchor_right = 0.0
anchor_bottom = 1.0
margin_left = -428.0
margin_top = -311.0
margin_right = -328.0
margin_bottom = -291.0
rect_scale = Vector2( 2, 2 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
min_value = 0.0
max_value = 100.0
step = 1.0
page = 0.0
value = 100.0
exp_edit = false
rounded = true
texture_under = ExtResource( 9 )
texture_over = ExtResource( 10 )
texture_progress = ExtResource( 11 )
radial_fill_degrees = 360.0
radial_center_offset = Vector2( 0, 0 )
nine_patch_stretch = false
_sections_unfolded = [ "Anchor", "Margin", "Pause", "Percent", "Rect", "Textures", "Theme" ]

[node name="HPTimer" type="Timer" parent="HPBarContainer" index="1"]

process_mode = 1
wait_time = 1.0
one_shot = false
autostart = true

[node name="HPLabel" type="Label" parent="HPBarContainer" index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -491.0
margin_top = -276.0
margin_right = -429.0
margin_bottom = -216.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 1 )
text = "100"
autowrap = true
uppercase = true
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Theme", "custom_fonts" ]

[node name="HPBarLabel" type="Label" parent="HPBarContainer" index="3"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -376.0
margin_top = -265.0
margin_right = -282.0
margin_bottom = -229.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 2 )
text = "Happiness"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Material", "custom_fonts" ]

[node name="SPBarContainer" type="Control" parent="." index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 356.0
margin_right = 396.0
margin_bottom = 40.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
__meta__ = {
"_edit_group_": true
}

[node name="SPBar" type="TextureProgress" parent="SPBarContainer" index="0"]

anchor_left = 0.0
anchor_top = 1.0
anchor_right = 0.0
anchor_bottom = 1.0
margin_left = -423.0
margin_top = -311.0
margin_right = -323.0
margin_bottom = -291.0
rect_scale = Vector2( 2, 2 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
min_value = 0.0
max_value = 100.0
step = 1.0
page = 0.0
value = 100.0
exp_edit = false
rounded = true
texture_under = ExtResource( 9 )
texture_over = ExtResource( 10 )
texture_progress = ExtResource( 11 )
radial_fill_degrees = 360.0
radial_center_offset = Vector2( 0, 0 )
nine_patch_stretch = false
_sections_unfolded = [ "Anchor", "Margin", "Pause", "Percent", "Rect", "Textures", "Theme" ]

[node name="SPTimer" type="Timer" parent="SPBarContainer" index="1"]

process_mode = 1
wait_time = 2.0
one_shot = false
autostart = true

[node name="SPLabel" type="Label" parent="SPBarContainer" index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -486.0
margin_top = -276.0
margin_right = -424.0
margin_bottom = -216.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 1 )
text = "100"
autowrap = true
uppercase = true
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Theme", "custom_fonts" ]

[node name="SPBarLabel" type="Label" parent="SPBarContainer" index="3"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -375.0
margin_top = -265.0
margin_right = -273.0
margin_bottom = -229.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 2 )
text = "Sleepiness"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Material", "custom_fonts" ]

[node name="FPBarContainer" type="Control" parent="." index="3"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 701.0
margin_right = 741.0
margin_bottom = 40.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
__meta__ = {
"_edit_group_": true
}

[node name="FPBar" type="TextureProgress" parent="FPBarContainer" index="0"]

anchor_left = 0.0
anchor_top = 1.0
anchor_right = 0.0
anchor_bottom = 1.0
margin_left = -423.0
margin_top = -311.0
margin_right = -323.0
margin_bottom = -291.0
rect_scale = Vector2( 2, 2 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
min_value = 0.0
max_value = 100.0
step = 1.0
page = 0.0
value = 100.0
exp_edit = false
rounded = true
texture_under = ExtResource( 9 )
texture_over = ExtResource( 10 )
texture_progress = ExtResource( 11 )
radial_fill_degrees = 360.0
radial_center_offset = Vector2( 0, 0 )
nine_patch_stretch = false
_sections_unfolded = [ "Anchor", "Margin", "Pause", "Percent", "Rect", "Textures", "Theme" ]

[node name="FPTimer" type="Timer" parent="FPBarContainer" index="1"]

process_mode = 1
wait_time = 1.0
one_shot = false
autostart = true

[node name="FPLabel" type="Label" parent="FPBarContainer" index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -486.0
margin_top = -276.0
margin_right = -424.0
margin_bottom = -216.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 1 )
text = "100"
autowrap = true
uppercase = true
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Theme", "custom_fonts" ]

[node name="FPBarLabel" type="Label" parent="FPBarContainer" index="3"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -375.0
margin_top = -265.0
margin_right = -273.0
margin_bottom = -229.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 2 )
text = "Hungriness"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Material", "custom_fonts" ]

[node name="PlayTimer" type="Timer" parent="." index="4"]

process_mode = 1
wait_time = 10.0
one_shot = true
autostart = false

[node name="SleepTimer" type="Timer" parent="." index="5"]

process_mode = 1
wait_time = 5.0
one_shot = true
autostart = false

[node name="HungerTimer" type="Timer" parent="." index="6"]

process_mode = 1
wait_time = 3.0
one_shot = true
autostart = false

[connection signal="pressed" from="Container/CenterContainer/HBoxContainer/Play" to="." method="_on_Play_pressed"]

[connection signal="pressed" from="Container/CenterContainer/HBoxContainer/Sleep" to="." method="_on_Sleep_pressed"]

[connection signal="pressed" from="Container/CenterContainer/HBoxContainer/Feed" to="." method="_on_Feed_pressed"]

[connection signal="timeout" from="HPBarContainer/HPTimer" to="." method="_on_HPTimer_timeout"]

[connection signal="timeout" from="SPBarContainer/SPTimer" to="." method="_on_SPTimer_timeout"]

[connection signal="timeout" from="FPBarContainer/FPTimer" to="." method="_on_FPTimer_timeout"]

[connection signal="timeout" from="PlayTimer" to="." method="_on_PlayTimer_timeout"]

[connection signal="timeout" from="SleepTimer" to="." method="_on_SleepTimer_timeout"]

[connection signal="timeout" from="HungerTimer" to="." method="_on_HungerTimer_timeout"]


